--- a/experiment/simulation/index.html
+++ b/experiment/simulation/index.html
@@ -1,13 +1,17 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<!-- Add CSS at the head of HTML file -->
-    <link rel="stylesheet" href="./css/main.css">
-</head>
-<body>
-		<!-- Your code goes here-->
-
-	<!-- Add JS at the bottom of HTML file --> 
-        <script src="./js/main.js"></script>
-</body>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://cdn.jsdelivr.net/pyodide/v0.21.3/full/pyodide.js"></script>
+    <script src="https://cdn.jsdelivr.net/pyodide/v0.21.3/full/pyodide.js"></script>
+   
+    <title>Vite + React</title>
+    <script type="module" crossorigin src="js/index-BhJbfkv9.js"></script>
+    <link rel="stylesheet" crossorigin href="css/index-BsRnoRDv.css">
+  </head>
+  <body>
+    <div id="root"></div>
+  </body>
 </html>
