--- a/experiment/simulation/index.html
+++ b/experiment/simulation/index.html
@@ -8,10 +8,11 @@
     <script src="https://cdn.jsdelivr.net/pyodide/v0.21.3/full/pyodide.js"></script>
    
     <title>Vite + React</title>
-    <script type="module" crossorigin src="js/index-BhJbfkv9.js"></script>
-    <link rel="stylesheet" crossorigin href="css/index-BsRnoRDv.css">
+    <script type="module" crossorigin src="./js/index-CpAJB94T.js"></script>
+    <link rel="stylesheet" crossorigin href="./css/index-BsRnoRDv.css">
   </head>
   <body>
     <div id="root"></div>
+
   </body>
 </html>
