--- a/experiment/simulation/index.html
+++ b/experiment/simulation/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -6,12 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.jsdelivr.net/pyodide/v0.21.3/full/pyodide.js"></script>
     <script src="https://cdn.jsdelivr.net/pyodide/v0.21.3/full/pyodide.js"></script>
-
+   
     <title>Vite + React</title>
-    <script type="module" crossorigin src="./js/index-C4bek1mC.js"></script>
-    <link rel="stylesheet" crossorigin href="./css/index-BZMIJAc9.css" />
+    <script type="module" crossorigin src="js/index-DdhrLokm.js"></script>
+    <link rel="stylesheet" crossorigin href="css/index-DI830eny.css">
   </head>
   <body>
     <div id="root"></div>
+
   </body>
 </html>
